tests/verbatim_scanner/errors/malformed_terminator.txxt
Expected: []
title:
    content here
malformed terminator